Fixed horizontal scrolling issue.
Added horizontal scrolling to tables if width demands it.

--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -29,6 +29,12 @@ section{
 	margin-bottom: 10px;
 }
 
+
+.assessmentArea {
+	width: 100%;
+	overflow-x: auto;
+}
+
 @media (max-width: 980px) {
 /* Enable use of floated navbar text */
 	.navbar-text.pull-right {
